--- a/index.html
+++ b/index.html
@@ -264,6 +264,117 @@
           </div>
         </div>
       </section>
+
+      <!-- News and Event Section -->
+      <section class="mb-24">
+        <div>
+          <div class="text-center mb-8">
+            <h1 class="font-bold text-3xl md:text-4xl mb-5">News & Event</h1>
+            <p class="text-gray-500">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised words which don't look even
+              slightly believable.
+            </p>
+          </div>
+          <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="border rounded-lg overflow-hidden border-gray-400">
+              <img src="/images/news-1.png" alt="" />
+              <p>Feb 05, 2027</p>
+              <h2>Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <button>Learn More</button>
+            </div>
+            <div class="border rounded-lg overflow-hidden border-gray-400">
+              <img src="/images/news-1.png" alt="" />
+              <p>Feb 05, 2027</p>
+              <h2>Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <button>Learn More</button>
+            </div>
+            <div class="border rounded-lg overflow-hidden border-gray-400">
+              <img src="/images/news-1.png" alt="" />
+              <p>Feb 05, 2027</p>
+              <h2>Collecting 8 points for discount</h2>
+              <p>
+                There are many variations of passages of Lorem Ipsum available.
+              </p>
+              <button>Learn More</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
+    <!-- Footer Section -->
+    <footer class="bg-orange-100 text-gray-700 py-10 px-4 md:px-16">
+      <div class="w-9/12 mx-auto">
+        <!-- Logo -->
+        <div class="mb-8 flex justify-between">
+          <img class="mb-8" src="/images/cup.png" alt="" />
+          <div class="flex items-center gap-2">
+            <h4>Ready to get strated?</h4>
+            <button
+              class="bg-gradient-to-r from-orange-500 to-red-500 px-3 py-2 rounded-lg text-white font-bold"
+            >
+              Get Started
+            </button>
+          </div>
+        </div>
+
+        <!-- Footer Links -->
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+          <!-- First Column -->
+           <div>
+             <h3 class="font-semibold text-lg mb-4">Quick Links</h3>
+            <ul class="text-gray-500 space-y-2">
+              <li><a class="hover:text-orange-600" href="">home</a></li>
+              <li><a class="hover:text-orange-600" href="">About Us</a></li>
+              <li><a class="hover:text-orange-600" href="">Insurance</a></li>
+              <li><a class="hover:text-orange-600" href="">Privacy Policy</a></li>
+            </ul>
+           </div>
+           <!-- Second Column -->
+           <div>
+             <h3 class="font-semibold text-lg mb-4">Our Service</h3>
+            <ul class="text-gray-500 space-y-2">
+              <li><a class="hover:text-orange-600" href="">Life Insurance</a></li>
+              <li><a class="hover:text-orange-600" href="">Car Insurance</a></li>
+              <li><a class="hover:text-orange-600" href="">Health Insurance</a></li>
+              <li><a class="hover:text-orange-600" href="">House Insurance</a></li>
+            </ul>
+           </div>
+           <!-- Third Column -->
+           <div>
+             <h3 class="font-semibold text-lg mb-4">Help</h3>
+            <ul class="text-gray-500 space-y-2">
+              <li><a class="hover:text-orange-600" href="">FAQs</a></li>
+              <li><a class="hover:text-orange-600" href="">Contact Us</a></li>
+              
+            </ul>
+           </div>
+           <!-- Fourth Column -->
+            <div >
+              <h3 class="font-semibold text-lg mb-4">Subscribe to our newsletter</h3>
+              <div class="flex flex-col space-y-2">
+                <div>
+                    <input placeholder="Email Address" type="text" class="bg-transparent border-b-2 border-black w-4/6 " />
+                    <i class="fa-solid fa-chevron-right w-7 h-7 inline-flex bg-orange-700 rounded-full text-white justify-center items-center"></i>
+                    <div class="flex justify-between w-2/5 mb-2 mt-8">
+                      <i class="fa-brands fa-facebook-f"></i>
+                      <i class="fa-brands fa-twitter"></i>
+                      <i class="fa-brands fa-square-instagram"></i>
+                    </div>
+                </div>
+              </div>          
+            </div>        
+          </div>
+          <div class="text-center pt-4 mt-8">
+              <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+          </div>
+    </footer>
   </body>
 </html>
